Fix mobile top nav alignment (#35)

--- a/src/containers/TopNav/TopNavMobileMenu/TopNavMobileMenu.scss
+++ b/src/containers/TopNav/TopNavMobileMenu/TopNavMobileMenu.scss
@@ -44,6 +44,7 @@ $top-nav-height: 60px;
   display: none;
 
   @media (max-width: 1200px) {
+    align-items: center;
     display: flex;
   }
 
